# Dynamic-Face-Recognition

./: CMakeLists.txt  README.md  feature.cpp  feature.h  functional.cpp  functional.h  main.cpp  mtcnn.cpp  mtcnn.h
face_id/: xuehaoma  zhoujielun
model/: deploy.prototxt
